Fix alignment of global notifications and wikia header.

--- a/skins/oasis/css/core/GlobalNotification.scss
+++ b/skins/oasis/css/core/GlobalNotification.scss
@@ -2,30 +2,9 @@
 @import "../mixins/border-radius";
 
 .global-notification {
-	padding: 8px 10px;
-	margin: 0 10px 10px;
-	.msg{
-		font-size: 13px;
-		line-height: 16px;
-		a {
-			text-decoration: underline;
-		}
-	}
-	.close {
-		float: right;
-		height: 14px;
-		width: 14px;
-		margin: 0;
-		img {
-			height: 11px;
-			width: 12px;
-		}
-	}
-}
-
-.global-notification {
 	@include box-shadow(0px, 2px, 5px, darken($color-page,12%));
 	width: 958px;
+	padding: 8px 10px;
 	margin: 0 auto;
 	z-index: $zTop + 1;
 	&.confirm { // Green
@@ -81,6 +60,23 @@
 		margin-left: -489px;
 		position: fixed;
 		top: 0;
+	}
+	.msg{
+		font-size: 13px;
+		line-height: 16px;
+		a {
+			text-decoration: underline;
+		}
+	}
+	.close {
+		float: right;
+		height: 14px;
+		width: 14px;
+		margin: 0;
+		img {
+			height: 11px;
+			width: 12px;
+		}
 	}
 }
 
